Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,6 +44,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def permutation(n,k):\n",
+    "    permut = factorial(n)/factorial(n-k)\n",
+    "    return permut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def combination(n,k):\n",
     "    None"
    ]
