--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    None"
+    "    comb = f"
    ]
   },
   {
