--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    comb = f"
+    "    comb = factorial(n)/factorial(k)"
    ]
   },
   {
