--- a/index.ipynb
+++ b/index.ipynb
@@ -51,12 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    comb = factorial(n)/factorial(k)"
+    "    comb = factorial(n)/factorial(k) * factorial(n-k)\n",
+    "    return comb"
    ]
   },
   {
