Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    comb = factorial(n)/factorial(k) * factorial(n-k)\n",
+    "    comb = factorial(n)/(factorial(k) * factorial(n-k))\n",
     "    return comb"
    ]
   },
