--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medal_top_3 = None\n",
+    "medal_top_3 = \n",
     "medal_top_3 # 504.0"
    ]
   },
