Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medal_top_3 = ()\n",
+    "medal_top_3 = permu\n",
     "medal_top_3 # 504.0"
    ]
   },
