--- a/index.ipynb
+++ b/index.ipynb
@@ -75,11 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "504.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "medal_top_3 = permu\n",
+    "medal_top_3 = permutation(9,3)\n",
     "medal_top_3 # 504.0"
    ]
   },
