Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = permutation()\n",
+    "draw_cons = combina\n",
     "draw_vow = None"
    ]
   },
