--- a/index.ipynb
+++ b/index.ipynb
@@ -137,12 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = combina\n",
-    "draw_vow = None"
+    "draw_cons = combination(6,2)\n",
+    "draw_vow = combination(4,3)"
    ]
   },
   {
