--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = permutai"
+    "sample = permutaion(10,5)"
    ]
   },
   {
