Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = permutation(10,5)"
+    "sample = combinatio(10,5)"
    ]
   },
   {
